refactors app component, and changes the import of it in idex because its no longer exportet like default

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Bringing you the finest news since 2019!"
     />
-    <title>React App</title>
+    <title>News Reader - The Finest News!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
